--- a/test/EndToEndTests/GeneratedClient/ODataVerificationClient/ODataVerificationClient.csproj
+++ b/test/EndToEndTests/GeneratedClient/ODataVerificationClient/ODataVerificationClient.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.OData.Edm" Version="7.7.0" />
     <PackageReference Include="Microsoft.OData.Client" Version="7.7.0" />
   </ItemGroup>
 
