Add Source link

--- a/Build.props
+++ b/Build.props
@@ -46,7 +46,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release'">
     <!--Overide the default full debug symbols regardless of configuration-->
-    <DebugType>pdbonly</DebugType>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   
   <Import Project="$(EnlistmentRoot)\tools\CustomMSBuild\Build.props" />
