--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,7 +83,8 @@ stages:
             $(rootDir)\src\Microsoft.OData.Extensions.Client.Abstractions\Microsoft.OData.Extensions.Client.Abstractions.csproj
             /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client.Abstractions\Microsoft.OData.Extensions.Client.Abstractions.$(RELEASE_SEMANTICS).nuspec 
             --configuration=$(buildConfiguration) 
-            --output=$(Build.ArtifactStagingDirectory)\Packages   
+            --output=$(Build.ArtifactStagingDirectory)\Packages
+            -Symbols -SymbolPackageFormat snupkg
         displayName: Packing Client Abstractions
 
       - task: DotNetCoreCLI@2
@@ -94,7 +95,8 @@ stages:
             $(rootDir)\src/Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.csproj
             /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.$(RELEASE_SEMANTICS).nuspec 
             --configuration=$(buildConfiguration) 
-            --output=$(Build.ArtifactStagingDirectory)\Packages 
+            --output=$(Build.ArtifactStagingDirectory)\Packages
+            -Symbols -SymbolPackageFormat snupkg
         displayName: Packing Client 
 
       - task: DotNetCoreCLI@2
@@ -106,6 +108,7 @@ stages:
             /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Migration\Microsoft.OData.Extensions.Migration.$(RELEASE_SEMANTICS).nuspec 
             --configuration=$(buildConfiguration) 
             --output=$(Build.ArtifactStagingDirectory)\Packages 
+            -Symbols -SymbolPackageFormat snupkg
         displayName: Packing  Migrations
 
       - publish: $(Build.ArtifactStagingDirectory)\Packages   
