--- a/src/Microsoft.OData.Extensions.Client/Microsoft.OData.Extensions.Client.csproj
+++ b/src/Microsoft.OData.Extensions.Client/Microsoft.OData.Extensions.Client.csproj
@@ -26,6 +26,10 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="2.1.0" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
