--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.csproj
@@ -26,6 +26,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.OData" Version="7.4.0" />
 		<PackageReference Include="Microsoft.Data.Edm" Version="5.8.4" />
 		<PackageReference Include="Microsoft.Data.OData" Version="5.8.4" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
