--- a/tools/CustomMSBuild/Versioning.props
+++ b/tools/CustomMSBuild/Versioning.props
@@ -1,10 +1,13 @@
 <Project>
 
   <!-- Set the version number: major, minor, build and release (i.e. alpha, beta or blank for RTM)-->
+  <!-- Be Noted: the version below is for the dll build, for the Nuget version, it's set in the Azure Pipeline Variabes.
+       Please make the version same.
+  -->
   <PropertyGroup>
     <VersionMajor Condition="'$(VersionMajor)' == ''">1</VersionMajor>
     <VersionMinor Condition="'$(VersionMinor)' == ''">0</VersionMinor>
-    <VersionBuild Condition="'$(VersionBuild)' == ''">3</VersionBuild>
+    <VersionBuild Condition="'$(VersionBuild)' == ''">6</VersionBuild>
     <VersionRelease Condition="'$(VersionRelease)' == ''"></VersionRelease>
   </PropertyGroup>
 
