--- a/src/Microsoft.OData.Extensions.Client.Abstractions/OData.V3Client.Abstractions.csproj
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/OData.V3Client.Abstractions.csproj
@@ -10,4 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Services.Client" Version="5.8.4" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+    <PackageReference Include="System.Net.Http" Version="4.3.0" />
+  </ItemGroup>
 </Project>
