--- a/sln/.nuget/NuGet.Config
+++ b/sln/.nuget/NuGet.Config
@@ -1,14 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="OData Feed" value="https://www.myget.org/F/odata/" />
+    <clear />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
-    <add key="Xunit Performance" value="https://www.myget.org/F/dotnet-buildtools/" />
   </packageSources>
-  <activePackageSource>
-    <add key="All" value="(Aggregate source)" />
-  </activePackageSource>
   <solution>
+    <clear />
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
 </configuration>
