--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
@@ -14,12 +14,21 @@
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <tags>Microsoft OData V3 Client</tags>
         <dependencies>
+          <group targetFramework=".NETFramework4.6.2">
             <dependency id="Microsoft.Data.Services.Client" version="$ODataClientPackageDependency$" />
+            <dependency id="System.Net.Http" version="4.3.0" />
+          </group>
+          <group targetFramework=".NETStandard2.0">
+            <dependency id="Microsoft.Data.Services.Client" version="$ODataClientPackageDependency$" />
+          </group>
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.Abstractions.dll" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.Abstractions.pdb" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.Abstractions.xml" target="lib\net462" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
