--- a/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
@@ -12,17 +12,28 @@
         <projectUrl>http://github.com/OData/Extensions</projectUrl>
         <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
-        <tags>Microsoft OpenApi OData EDM</tags>
+        <tags>Microsoft OData EDM Client</tags>
         <dependencies>
+          <group targetFramework=".NETFramework4.6.2">
+            <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionNuGetSemantic$]" />
             <dependency id="Microsoft.Extensions.DependencyInjection" version="$ExtensionsDependencyInjectionDependency$" />
             <dependency id="Microsoft.Extensions.Options" version="$ExtensionsOptionsDependency$" />
             <dependency id="Microsoft.Extensions.Http" version="$ExtensionsHttpDependency$" />
-            <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionFullSemantic$-Nightly$NightlyBuildVersion$]" />
+          </group>
+          <group targetFramework=".NETStandard2.0">
+            <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionNuGetSemantic$]" />
+            <dependency id="Microsoft.Extensions.DependencyInjection" version="$ExtensionsDependencyInjectionDependency$" />
+            <dependency id="Microsoft.Extensions.Options" version="$ExtensionsOptionsDependency$" />
+            <dependency id="Microsoft.Extensions.Http" version="$ExtensionsHttpDependency$" />
+          </group>
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.V3Client.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.dll" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.pdb" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.xml" target="lib\net462" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.xml" target="lib\netstandard2.0" />
   </files>
 </package>
