--- a/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Nightly.nuspec
@@ -29,11 +29,11 @@
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.dll" target="lib\net462" />
-    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.pdb" target="lib\net462" />
-    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.Client.xml" target="lib\net462" />
-    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.dll" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.pdb" target="lib\net462" />
+    <file src="$ProductRoot$\net462\Microsoft.OData.Extensions.V3Client.xml" target="lib\net462" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.V3Client.xml" target="lib\netstandard2.0" />
   </files>
 </package>
