Upgrade Microsoft.NETCore.App package

--- a/sln/.nuget/packages.config
+++ b/sln/.nuget/packages.config
@@ -7,7 +7,7 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" />
   <package id="Microsoft.Hadoop.Avro" version="1.4.0.0" />
-  <package id="Microsoft.NETCore.App" version="1.0.0" />
+  <package id="Microsoft.NETCore.App" version="2.1.30" />
   <package id="Microsoft.NETCore.Jit" version="1.1.13" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" />
   <package id="Microsoft.NETCore.Runtime.CoreCLR" version="1.0.2" />
@@ -22,7 +22,7 @@
   <package id="xunit.extensibility.execution" version="2.1.0" />
   <package id="xunit.runner.visualstudio" version="2.1.0" />
 
-  <!--Below packages are used by Microsoft.OData.ExtensionsClient-->
+  <!--Below packages are used by Microsoft.OData.Extensions.Client-->
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" />
   <package id="Microsoft.Extensions.Options" version="2.1.0" />
   <package id="Microsoft.Extensions.Http" version="2.1.0" />
