--- a/test/FunctionalTests/Microsoft.OData.Extensions.Client.Tests/OData.Client.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.OData.Extensions.Client.Tests/OData.Client.Tests.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.1.30" />
+  </ItemGroup>
+
 </Project>
