--- a/test/FunctionalTests/Microsoft.OData.Extensions.Migration.Tests/Microsoft.OData.Extensions.Migration.Tests.csproj
+++ b/test/FunctionalTests/Microsoft.OData.Extensions.Migration.Tests/Microsoft.OData.Extensions.Migration.Tests.csproj
@@ -36,4 +36,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.1.30" />
+  </ItemGroup>
 </Project>
