--- a/test/EndToEndTests/Services/ODataVerificationService/ODataVerificationService.csproj
+++ b/test/EndToEndTests/Services/ODataVerificationService/ODataVerificationService.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.1.30" />
+  </ItemGroup>
+
 </Project>
